# AI_Stock_Advisor

./: .gitignore  Project Folder Structure.txt  README.md  app.py  balance_work.txt  chat_agent.py  main.py  plot_chart.py  pyproject.toml  rag_engine.py  rag_eval.py  requirements.txt  stock_logic.py
config/: prompt.py
embeddings/: embedder.py  vector_store.py
ingestion/: chunker.py  pdf_loader.py
minervini/: stage_analysis.py  trend_analysis.py
rag/: answer_generator.py  retriever.py
stock_data/: fetcher.py  indicators.py
