[project]
name = "ai-stock-advisor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.0",
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.6",
    "langchain-pymupdf4llm>=0.5.0",
    "langchain-text-splitters>=1.1.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pymupdf==1.26.6",
    "pymupdf-layout>=1.26.6",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.52.2",
    "yfinance>=1.0",
]
